--- a/playbooks/talos.yml
+++ b/playbooks/talos.yml
@@ -492,13 +492,6 @@
             theia.crt: "{{ lookup('file', hostvars['theia'].ca_publickey_path) }}"
       tags: ["ca", "restic"]
 
-    - name: Add fluxcd-community Helm repo
-      delegate_to: localhost
-      kubernetes.core.helm_repository:
-        name: "fluxcd-community"
-        repo_url: "https://fluxcd-community.github.io/helm-charts"
-      tags: ["flux"]
-
     - name: Create Flux namespace
       delegate_to: localhost
       kubernetes.core.k8s:
@@ -511,25 +504,14 @@
             labels: "{{ pss_privileged_labels }}"
       tags: ["flux"]
 
-    - name: Deploy Flux chart
+    - name: Deploy Flux operator
       delegate_to: localhost
       kubernetes.core.helm:
-        name: flux2
-        chart_ref: fluxcd-community/flux2
-        chart_version: "{{ flux_version }}"
+        name: flux-operator
+        chart_ref: "oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator"
+        chart_version: "{{ flux_operator_version }}"
         release_namespace: flux-system
         create_namespace: false
-        update_repo_cache: true
-        # https://github.com/fluxcd-community/helm-charts/blob/main/charts/flux2/values.yaml
-        release_values:
-          kustomizeController:
-            container:
-              additionalArgs:
-                - --concurrent=20
-          helmController:
-            container:
-              additionalArgs:
-                - --concurrent=20
       tags: ["flux"]
 
     - name: Get GitLab host keys
@@ -546,7 +528,7 @@
         gitlab_host_keys: "{{ __gitlab_host_keys.stdout_lines | sort | join('\n') }}"
       tags: ["flux"]
 
-    - name: Create Flux bootstrap resources
+    - name: Create Flux instance
       delegate_to: localhost
       kubernetes.core.k8s:
         state: present
