Add Unifi OS Server VM

--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -176,6 +176,8 @@ subnets:
       - 10.0.100.32/27
     ipmi:
       - 10.0.100.64/27
+    unifios:
+      - 10.0.100.112/31
     clients:
       - 10.0.100.128/25
   san:
