--- a/inventory/host_vars/rb5009/firewall.yml
+++ b/inventory/host_vars/rb5009/firewall.yml
@@ -77,6 +77,7 @@ __mt_firewall_subnet_lists:
   - "{{ [hostvars['ha'].ansible_host] | andrei.utils.items2dictlist('address', list='allow-talos-lb', comment='ha-talos-lb') }}"
   - "{{ [hostvars['theia'].host_ips.general] | andrei.utils.items2dictlist('address', list='samba', comment='theia-samba') }}"
   - "{{ [hostvars['desktop'].host_ips.public] | andrei.utils.items2dictlist('address', list='allow-samba', comment='desktop-samba-public') }}"
+  - "{{ subnets.mgmt.unifios | andrei.utils.items2dictlist('address', list='unifi-os-server', comment='unifi-os-server') }}"
 
 __mt_firewall_address_lists_manual:
   - address: "{{ wireguard_endpoint.split(':', 1)[0] }}"
