Configure neighbor and MAC server

--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -78,6 +78,7 @@ internal_net:
     mt_lists:
       - LAN
       - SEC
+      - ALLOW_MAC
     dhcp_range: 10.0.100.128-10.0.100.254
     domain: man.{{ domains['hb'] }}
   san:
