--- a/playbooks/mikrotik.yml
+++ b/playbooks/mikrotik.yml
@@ -462,7 +462,7 @@
         handle_absent_entries: remove
         handle_entries_content: remove_as_much_as_possible
       when: mt_interface_list | default([])
-      tags: ["interfaces", "firewall"]
+      tags: ["interfaces", "firewall", "interface-list"]
 
     - name: Configure interface members  # noqa args[module]
       delegate_to: localhost
@@ -472,7 +472,34 @@
         handle_absent_entries: remove
         handle_entries_content: remove_as_much_as_possible
       when: mt_interface_members | default([])
-      tags: ["interfaces", "firewall"]
+      tags: ["interfaces", "firewall", "interface-list"]
+
+    - name: Configure neighbor discovery  # noqa args[module]
+      delegate_to: localhost
+      community.routeros.api_modify:
+        path: ip neighbor discovery-settings
+        data: "{{ mt_ip_neighbor_discovery }}"
+        handle_absent_entries: remove
+        handle_entries_content: remove_as_much_as_possible
+      tags: ["neighbor-discovery"]
+
+    - name: Configure MAC server  # noqa args[module]
+      delegate_to: localhost
+      community.routeros.api_modify:
+        path: tool mac-server
+        data: "{{ mt_mac_server }}"
+        handle_absent_entries: remove
+        handle_entries_content: remove_as_much_as_possible
+      tags: ["mac-server"]
+
+    - name: Configure MAC WinBox  # noqa args[module]
+      delegate_to: localhost
+      community.routeros.api_modify:
+        path: tool mac-server mac-winbox
+        data: "{{ mt_mac_winbox }}"
+        handle_absent_entries: remove
+        handle_entries_content: remove_as_much_as_possible
+      tags: ["mac-winbox"]
 
     - name: Configure IPv4 firewall lists  # noqa args[module]
       delegate_to: localhost
