--- a/inventory/group_vars/mikrotik/vars.yml
+++ b/inventory/group_vars/mikrotik/vars.yml
@@ -16,6 +16,24 @@ host_ips:
 
 mt_admin_allowed_addresses: "{{ firewall_trusted_sources + [all_net.mgmt.cidr] }}"
 
+__mt_interface_members_auto: >-
+  {%- set tmp = [] -%}
+  {%- for name, config in mt_networks.items() if 'mt_lists' in config -%}
+  {%- for list in config.mt_lists -%}
+  {{- tmp.append({'interface': name | upper, 'list': list}) -}}
+  {%- endfor -%}
+  {%- endfor -%}
+  {{ tmp }}
+
+mt_interface_members: "{{ (__mt_interface_members_manual | default([])) + __mt_interface_members_auto }}"
+
+mt_interface_list: >-
+  {%- set tmp = [] -%}
+  {%- for name in mt_interface_members | map(attribute='list') | unique -%}
+  {{- tmp.append({"name": name}) -}}
+  {%- endfor -%}
+  {{ tmp }}
+
 mt_logging_actions: >-
   {%- set tmp = [] -%}
   {%- for h in groups['prom'] -%}
@@ -25,7 +43,7 @@ mt_logging_actions: >-
     "remote-port": 514,
     "target": "remote",
     "src-address": host_ips.mgmt,
-    "bsd-syslog": true,
+    "syslog-time-format": "bsd-syslog",
   }) -}}
   {%- endfor -%}
   {{ tmp }}
