--- a/inventory/host_vars/rb5009/firewall.yml
+++ b/inventory/host_vars/rb5009/firewall.yml
@@ -30,7 +30,7 @@ __mt_firewall_raw_auto: >-
   {%- endfor -%}
   {{ tmp }}
 
-mt_firewall_raw: "{{ __mt_firewall_raw_auto }}"
+mt_firewall_raw: "{{ __mt_firewall_raw_auto + vault_mt_firewall_raw_ipv4 }}"
 
 __kube_cidr_map: >-
   {%- set tmp = {} -%}
@@ -61,7 +61,71 @@ __mt_firewall_subnet_lists:
   - "{{ [hostvars['desktop'].host_ips.public] | andrei.utils.items2dictlist('address', list='allow-samba', comment='desktop-samba-public') }}"
   - "{{ subnets.mgmt.unifios | andrei.utils.items2dictlist('address', list='unifi-os-server', comment='unifi-os-server') }}"
 
+# https://help.mikrotik.com/docs/spaces/ROS/pages/328513/Building+Advanced+Firewall
 __mt_firewall_address_lists_manual:
+  - address: 0.0.0.0/8
+    comment: "defconf: RFC6890"
+    list: no_forward_ipv4
+  - address: 169.254.0.0/16
+    comment: "defconf: RFC6890"
+    list: no_forward_ipv4
+  - address: 224.0.0.0/4
+    comment: "defconf: multicast"
+    list: no_forward_ipv4
+  - address: 255.255.255.255
+    comment: "defconf: RFC6890"
+    list: no_forward_ipv4
+  - address: 127.0.0.0/8
+    comment: "defconf: RFC6890"
+    list: bad_ipv4
+  - address: 192.0.0.0/24
+    comment: "defconf: RFC6890"
+    list: bad_ipv4
+  - address: 192.0.2.0/24
+    comment: "defconf: RFC6890 documentation"
+    list: bad_ipv4
+  - address: 198.51.100.0/24
+    comment: "defconf: RFC6890 documentation"
+    list: bad_ipv4
+  - address: 203.0.113.0/24
+    comment: "defconf: RFC6890 documentation"
+    list: bad_ipv4
+  - address: "240.0.0.0-255.255.255.254" # 240.0.0.0/4 includes multicast
+    comment: "defconf: RFC6890 reserved"
+    list: bad_ipv4
+  - address: 0.0.0.0/8
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 10.0.0.0/8
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 100.64.0.0/10
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 169.254.0.0/16
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 172.16.0.0/12
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 192.0.0.0/29
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 192.168.0.0/16
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 198.18.0.0/15
+    comment: "defconf: RFC6890 benchmark"
+    list: not_global_ipv4
+  - address: 255.255.255.255
+    comment: "defconf: RFC6890"
+    list: not_global_ipv4
+  - address: 224.0.0.0/4
+    comment: "defconf: multicast"
+    list: bad_src_ipv4
+  - address: 255.255.255.255
+    comment: "defconf: RFC6890"
+    list: bad_src_ipv4
   - address: "{{ hostvars['p9p'].wireguard_ip }}"
     list: roaming-general
     comment: p9p
@@ -101,44 +165,29 @@ mt_firewall_nat_ipv6:
 
 # https://help.mikrotik.com/docs/display/ROS/Building+Advanced+Firewall#BuildingAdvancedFirewall-IPv6AddressLists
 __mt_firewall_address_lists_ipv6_manual:
-  - address: ::/128
-    comment: 'defconf: unspecified address'
-    list: bad_ipv6
+  - address: fe80::/10
+    comment: "defconf: RFC6890 Linked-Scoped Unicast"
+    list: no_forward_ipv6
+  - address: ff00::/8
+    comment: "defconf: multicast"
+    list: no_forward_ipv6
   - address: ::1/128
-    comment: 'defconf: lo'
-    list: bad_ipv6
-  - address: fec0::/10
-    comment: 'defconf: site-local'
+    comment: "defconf: RFC6890 lo"
     list: bad_ipv6
   - address: ::ffff:0.0.0.0/96
-    comment: 'defconf: ipv4-mapped'
+    comment: "defconf: RFC6890 IPv4 mapped"
     list: bad_ipv6
-  - address: ::/96
-    comment: 'defconf: ipv4 compat'
-    list: bad_ipv6
-  - address: 100::/64
-    comment: 'defconf: discard only '
+  - address: 2001::/23
+    comment: "defconf: RFC6890"
     list: bad_ipv6
   - address: 2001:db8::/32
-    comment: 'defconf: documentation'
+    comment: "defconf: RFC6890 documentation"
     list: bad_ipv6
   - address: 2001:10::/28
-    comment: 'defconf: ORCHID'
+    comment: "defconf: RFC6890 orchid"
     list: bad_ipv6
-  - address: 3ffe::/16
-    comment: 'defconf: 6bone'
-    list: bad_ipv6
-  - address: ::224.0.0.0/100
-    comment: 'defconf: other'
-    list: bad_ipv6
-  - address: ::127.0.0.0/104
-    comment: 'defconf: other'
-    list: bad_ipv6
-  - address: ::/104
-    comment: 'defconf: other'
-    list: bad_ipv6
-  - address: ::255.0.0.0/104
-    comment: 'defconf: other'
+  - address: ::/96
+    comment: "defconf: ipv4 compat"
     list: bad_ipv6
   - address: 100::/64
     comment: 'defconf: RFC6890 Discard-only'
@@ -152,6 +201,15 @@ __mt_firewall_address_lists_ipv6_manual:
   - address: fc00::/7
     comment: 'defconf: RFC6890 Unique-Local'
     list: not_global_ipv6
+  - address: ::/128
+    comment: "defconf: unspecified"
+    list: bad_dst_ipv6
+  - address: ::/128
+    comment: "defconf: unspecified"
+    list: bad_src_ipv6
+  - address: ff00::/8
+    comment: "defconf: multicast"
+    list: bad_src_ipv6
 
 __mt_firewall_address_lists_ipv6_auto: >-
   {%- set tmp = [] -%}
