Add 4G swap to gitlab

--- a/inventory/group_vars/gitlab/vars.yml
+++ b/inventory/group_vars/gitlab/vars.yml
@@ -60,3 +60,5 @@ gitlab_gc_oncalendar: "Tue,Fri 02:00:00"
 
 prometheus_blackbox_http_targets:
   - "{{ gitlab_external_url }}"
+
+swapfile_size: 4G
