--- a/inventory/host_vars/rb5009/dns.yml
+++ b/inventory/host_vars/rb5009/dns.yml
@@ -1,7 +1,8 @@
 ---
 
 mt_dns_settings:
-  - allow-remote-requests: true
+  - servers: "1.1.1.1,8.8.8.8"
+    allow-remote-requests: true
     cache-size: 102400
 
 mt_dns_exclude_comment_regex: "^((dhcp|manual|private)-.*|external-dns managed$)"
