--- a/inventory/host_vars/laptop/wireguard.yml
+++ b/inventory/host_vars/laptop/wireguard.yml
@@ -6,10 +6,10 @@ wireguard_addresses:
 
 wireguard_dns_list:
   - "{{ hostvars['rb5009'].wireguard_ip }}"
-  - "1.1.1.1"
-  - "8.8.8.8"
   - "{{ domains['hb'] }}"
-  - "vm.{{ domains['hb'] }}"
+  - "{{ all_net.vm.domain }}"
+  - "{{ all_net.mgmt.domain }}"
+  - "{{ all_net.talos.domain }}"
 
 wireguard_mt_allowed_ips:
   - "{{ all_net | json_query('*.cidr') }}"
