Remove non-router DNS everywhere
Following up on 2a8ac69fcec98919acef1277e1b7b815b8bbf425

--- a/inventory/host_vars/rompi/network.yml
+++ b/inventory/host_vars/rompi/network.yml
@@ -5,4 +5,4 @@ dhcpcd_config: |
   interface eth0
   static ip_address={{ ansible_host }}/24
   static routers=10.1.0.1
-  static domain_name_servers=10.1.0.1 1.1.1.1 8.8.8.8
+  static domain_name_servers=10.1.0.1
