Only allow root login from trusted sources

--- a/inventory/group_vars/kvm_hv/auto-ssh.yml
+++ b/inventory/group_vars/kvm_hv/auto-ssh.yml
@@ -10,3 +10,7 @@ ssh_custom_host_names:
   - "{{ inventory_hostname }}.vm.{{ domain }}"
   - "{{ host_ips.san }}"
   - "{{ inventory_hostname }}.san.{{ domain }}"
+
+sshd_extra_config: |
+  Match Address {{ (firewall_trusted_sources + (subnets | json_query('*.hosts') | flatten)) | join(',') }}
+    PermitRootLogin prohibit-password
