Set AM retention to 192h
Fixes "repeat_interval is greater than the data retention period. It can lead to notifications being repeated more often than expected."

--- a/inventory/group_vars/prom_common/alertmanager.yml
+++ b/inventory/group_vars/prom_common/alertmanager.yml
@@ -28,6 +28,9 @@ alertmanager_receivers:
         title: '{% raw %}{{ template "discord.andrei.title" . }}{% endraw %}'
         message: '{% raw %}{{ template "discord.andrei.message" . }}{% endraw %}'
 
+alertmanager_config_flags_extra:
+  data.retention: 192h
+
 alertmanager_route:
   group_by: ['instance', 'job']
   group_wait: 30s
