--- a/playbooks/manual-update.yml
+++ b/playbooks/manual-update.yml
@@ -5,6 +5,7 @@
   hosts: servers, !romsto, !syno, !talos
   gather_facts: true
   become: true
+  strategy: free
   tasks:
     - name: Upgrade with dnf # noqa package-latest
       ansible.builtin.dnf:
@@ -12,6 +13,7 @@
         state: latest
         update_cache: true
       register: __dnf_result
+      notify: Reboot
       when: ansible_os_family == 'RedHat'
 
     - name: Upgrade with apt
@@ -19,6 +21,7 @@
         update_cache: true
         upgrade: dist
       register: __apt_result
+      notify: Reboot
       when: ansible_os_family == 'Debian'
 
     - name: Print dnf results
@@ -35,20 +38,7 @@
         - __apt_result is defined
         - __apt_result.stdout_lines | default([])
 
-    # - name: Reboot if required [dnf]
-    #   async: 30
-    #   poll: 0
-    #   reboot:
-    #   when:
-    #     - __dnf_result is defined
-    #     - __dnf_result.results | select('regex', '^Installed: (kernel-|systemd-).*') is any
-    #   tags: ["reboot"]
-
-    # - name: Reboot if required [apt]
-    #   async: 30
-    #   poll: 0
-    #   reboot:
-    #   when:
-    #     - __apt_result is defined
-    #     - __apt_result.stdout_lines | select('regex', '^Setting up ((raspberrypi-)?kernel|systemd).*') is any
-    #   tags: ["reboot"]
+  handlers:
+    - name: Reboot
+      ansible.builtin.reboot:
+      when: auto_reboot | default(false) | bool
