--- a/inventory/group_vars/rom/vars.yml
+++ b/inventory/group_vars/rom/vars.yml
@@ -1,3 +1,3 @@
 ---
 
-proxy_hosts: "{{ groups['webgw'] | intersect(groups['rom']) | map('extract', hostvars, 'ansible_host') }}"
+mt_dns_entries: []
