--- a/inventory/host_vars/rb5009/vars.yml
+++ b/inventory/host_vars/rb5009/vars.yml
@@ -28,11 +28,8 @@ mt_ipv6_dhcp_client:
 
 mt_ip_routes:
   - dst-address: 10.1.0.0/24
-    gateway: "{{ hostvars['romsto'].wireguard_ip }}"
+    gateway: "{{ hostvars['udr7'].wireguard_ip }}"
     distance: 1
-  # - dst-address: 10.1.0.0/24
-  #   gateway: "{{ hostvars['rompi'].wireguard_ip }}"
-  #   distance: 2
 
 mt_upnp_interfaces: >-
   {%- set tmp = [] -%}
