--- a/inventory/host_vars/rompi/wireguard.yml
+++ b/inventory/host_vars/rompi/wireguard.yml
@@ -11,9 +11,7 @@ wireguard_dns_list:
 wireguard_mt_allowed_ips:
   - "{{ hostvars['rb5009'].wireguard_ip }}/32"
   - "{{ subnets.mt.webgw }}"
-  - "{{ subnets.vm.loki }}"
-  - "{{ subnets.vm.prom }}"
-  - "{{ firewall_trusted_sources }}"
+  - "{{ firewall_trusted_sources | ansible.utils.reduce_on_network(wg_net.mt.cidr) }}"
 
 wireguard_dns: "{{ wireguard_dns_list | join(', ') }}"
 wireguard_private_key: "{{ lookup('community.general.passwordstore', 'network/' + inventory_hostname + '_wg_pk') }}"
