--- a/inventory/host_vars/romsto/wireguard.yml
+++ b/inventory/host_vars/romsto/wireguard.yml
@@ -7,15 +7,10 @@ wireguard_addresses:
 
 wireguard_mt_allowed_ips:
   - "{{ hostvars['rb5009'].wireguard_ip }}/32"
-  - "{{ hostvars['theia'].host_ips.vm }}/32"
-  - "{{ hostvars['theia'].host_ips.general }}/32" # GENERAL is main interface, required when Theia is initiating connections
-  - "{{ subnets.vm.loki }}"
-  - "{{ subnets.vm.prom }}"
-  - "{{ firewall_trusted_sources }}"
+  - "{{ firewall_trusted_sources | ansible.utils.reduce_on_network(wg_net.mt.cidr) }}"
 
 mt_wg_allowed_addresses:
   - "{{ wireguard_addresses | ansible.utils.ipaddr('address') | ansible.utils.ipaddr('host') }}"
-  - "10.1.0.0/24"
 
 wireguard_private_key: "{{ lookup('community.general.passwordstore', 'network/' + inventory_hostname + '_wg_pk') }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
