--- a/playbooks/server-debian-install.yml
+++ b/playbooks/server-debian-install.yml
@@ -32,6 +32,7 @@
       - bash-completion
       - binutils
       - btrfs-progs
+      - chrony
       - cryptsetup
       - curl
       - dosfstools
@@ -52,7 +53,6 @@
       - rsync
       - shim-signed
       - sudo
-      - systemd-timesyncd
       - tpm-udev
       - tpm2-tools
       - vim
